# learning-genai

./: pyproject.toml
chroma_db_data/: chroma.sqlite3
learn-langchain/: 00-intro.py  01-learning-fp.py  README.md  prompt.txt  simple-rag.py
learn-langchain/chains/: chain-demo.py  conditional-chain.py  paraller-chain.py
learn-langchain/helper_functions/: __init__.py  functions.py
learn-langchain/idk/: creating-embedding.py
learn-langchain/propmts/: chat-history.py  dyanmic-prompt.py  static-dynamic.py  template.json  template_generator.py
learn-langchain/runnable/: do-nothing.py  if-else.py  one-by-one.py  py-fun-runnable.py  same-time.py
learn-langchain/structured-output/: main.py
learn-langchain/working-with-chatbot/: chat-bot-demo.py
learn-langchain/working-with-llm/: main.py
rag/document-loader/: csv.py  data.csv  data.txt  dir.py  document_loader.py  pdf.py  web.py
rag/retrivers/: first.py  vector-based.py  wikipedia-based.py
rag/text-splitter/: doc-splitter.py  length-based.py  semantic-based.py  text-structure-based.py
rag/vector-store/: demo.py  get.py
youtube-chatbot/: main.py
